--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -4,7 +4,7 @@
     {{ end }}
     {{- if ne .Site.Params.footerHideCredits true | default false }}
     <div class="credits">
-        Powered by <a href="https://gohugo.io">Hugo</a> &bull; <a href="https://colinmurphy.me/tux-theme">Tux</a> theme
+        Powered by <a href="https://gohugo.io">Hugo</a>, with the <a href="https://github.com/colinmurphy1/hugo-theme-tux">tux</a> theme.
     </div>
     {{- end }}
 </footer>
