Add optional goatcounter analytics to theme

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -21,6 +21,7 @@
         navButton.addEventListener('click', () => navLinks.classList.toggle('hidden-mobile'));
     </script>
 
+    {{- partial "goatcounter.html" . -}}
     {{- partial "custom_body.html" . -}}
 </body>
 </html>
