--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -25,10 +25,10 @@
 {{- template "_internal/twitter_cards.html" . }}
 {{- template "_internal/schema.html" . }}
 
-<!-- Load Google Web Fonts: Inter and Inconsolata -->
+<!-- Load Google Web Fonts: Inter and JetBrains Mono -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inconsolata&family=Inter:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet"> 
+<link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&family=Inter:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet"> 
 
 <!-- Favicon -->
 {{- with .Site.Params.favicon -}}
